A few updates, links to undersun site, removed email support section since will be adding support offering info to undersun consulting site
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4235 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/website/services.html
+++ b/website/services.html
@@ -204,35 +204,6 @@
           </tr>
         </tbody>
       </table>
-      <br/>
-      <table border="0" width="100%" cellspacing="0" cellpadding="0" class="boxoutside">
-        <tbody>
-          <tr>
-            <td width="100%">
-            <table width="100%" border="0" cellspacing="0" cellpadding="0" class="boxtop">
-              <tbody>
-                <tr>
-                  <td valign="middle" align="left">
-                  <div class="boxhead">Training Schedule</div>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-            </td>
-          </tr>
-          <tr>
-            <td width="100%">
-            <table width="100%" border="0" cellspacing="0" cellpadding="0" class="boxbottom">
-              <tbody>
-                <tr>
-                  <td align="left"> <a href="mailto:training@ofbiz.org" class="buttontext">Contact Us For Details</a> </td>
-                </tr>
-              </tbody>
-            </table>
-            </td>
-          </tr>
-        </tbody>
-      </table>
 </div>
 
       <!-- This column contains the actual lists of service providers -->
@@ -457,57 +428,18 @@ related services.</p>
       </ul>
       </div>
 
-<!--
-      <hr class="sepbar">
-      <p class="contenttext"><b><a name="Voting">OFBiz Feature Voting
-Site</a></b></p>
-      <p class="contenttext">We are excited to introduce a new level of
-opportunity
-for community involvement in the progress of OFBiz: the OFBiz Feature
-Voting
-Site. This tool will help to fund the continuation of the project and
-at the
-same time provide a mechanism for focusing and utilizing community
-feedback and
-priorities.</p>
-      <p class="contenttext">The site is built using components from
-OFBiz including
-the eCommerce and Work Effort applications. As votes are purchased for
-specific
-tasks those tasks and the tasks that they depend on will rise to the
-top of the
-priority list. As tasks from this list are worked on and completed
-status
-updates and comments will be attached to them to that everyone can see
-how
-things are progressing, and approximately when specific features will
-be
-implemented.</p>
-      <p class="contenttext">We will create new tasks from requests
-submitted in the
-request area of the voting site. This provides a way for you to get
-your own
-needs into the system as tasks in addition to being able to prioritize
-existing
-tasks.</p>
-      <p class="contenttext"><b>Please check back soon for a status
-update on the voting
-site. It should be up early in 2004.</b></p>
--->
-
       <hr class="sepbar">
       <p class="contenttext"><b><a name="Training">Seminars and Training</a></b></p>
       <p class="contenttext">Seminars and Training Courses are being
 offered by Andy
-Zeneski and David E. Jones (through their consulting firm Undersun
-Consulting LLC) to spread knowledge of OFBiz and related topics.
+Zeneski and David E. Jones (through their consulting firm <a class="buttontext" href="http://www.undersunconsulting.com/control/home.html?atc=OFB" target="_blank">Undersun
+Consulting LLC</a>) to spread knowledge of OFBiz and related topics.
 Revenue from the training will help to fund the open source project and
 improve the training materials and documentation. The training
 materials are available for free as part of the open source project,
 and are linked to in the training area to the left on this page. If you
-are interested in participating in these courses or seminars, please
-contact
-us at <a href="mailto:training@ofbiz.org">training@ofbiz.org</a>.</p>
+are interested in participating in these courses or seminars, 
+find more information at <a class="buttontext" href="http://www.undersunconsulting.com/control/home.html?atc=OFB" target="_blank">Undersun Consulting</a>.</p>
       <p class="contenttext">In addition to organized training and
 seminars that are priced per participant we are also offering on-site
 training which can be
@@ -516,8 +448,7 @@ plus expenses
 per instructor rather than per attendee. Keep in mind that you are free
 to sell seats
 in the class to help reduce your cost if you choose this option. Once
-again if you are interested please contact us at <a
- href="mailto:training@ofbiz.org">training@ofbiz.org</a>.</p>
+again if you are interested find more information at <a class="buttontext" href="http://www.undersunconsulting.com/control/home.html?atc=OFB" target="_blank">Undersun Consulting</a>.</p>
       <p class="contenttext">We also plan to offer online automated
 training offered as an ASP service. This will most likely be produced
 and operated by a partner that
@@ -537,292 +468,6 @@ rate plus expenses per "mentor" and personal attention would vary
 according to the number
 of team members taking advantage of the service.</p>
       <hr class="sepbar">
-      <p class="contenttext"><b><a name="EmailSupport">Premium Email
-Support</a></b></p>
-      <p class="contenttext">Undersun Consulting LLC is pleased to
-announce a premium email support
-offering to OFBiz users. Premium support will guarantee faster turn
-around times for
-support on any existing OFBiz feature or component. Please contact
-us at <a href="mailto:support@ofbiz.org">support@ofbiz.org</a> or
-click on the PayPal links below to sign up.</p>
-      <p class="contenttext">The monthly or yearly fee includes mailing
-list and archive access and covers all basic questions. Basic questions
-which will be answered as soon as possible. More complicated Priority
-questions and issues (marked as URGENT in the subject line of the
-email) will be resolved as soon as possible and priority hours will be
-used in resolving the issue. We will keep in touch with you so will
-know how many hours we expect to spend resolving the issue, and
-we will let you know when we go beyond the priority hours included in
-your service plan. More complication non-priority
-issues will resolved on a lower priority basis but no priority hours
-will be used.</p>
-      <p class="contenttext">Addresses:</p>
-      <table cellpadding="2" cellspacing="0" border="1">
-        <tbody>
-          <tr>
-            <td>
-            <div class="contenttext"><b>Priority</b></div>
-            </td>
-            <td>
-            <div class="contenttext"><b>Response Within</b></div>
-            </td>
-            <td>
-            <div class="contenttext"><b>Resolution</b></div>
-            </td>
-            <td>
-            <div class="contenttext"><b>Audience</b></div>
-            </td>
-            <td>
-            <div class="contenttext"><b>Searchable Archives</b></div>
-            </td>
-          </tr>
-          <tr>
-            <td>
-            <div class="contenttext">Yes</div>
-            </td>
-            <td>
-            <div class="contenttext">One Business Day</div>
-            </td>
-            <td>
-            <div class="contenttext">ASAP</div>
-            </td>
-            <td>
-            <div class="contenttext">Public</div>
-            </td>
-            <td>
-            <div class="contenttext">Yes</div>
-            </td>
-          </tr>
-          <tr>
-            <td>
-            <div class="contenttext">Yes</div>
-            </td>
-            <td>
-            <div class="contenttext">One Business Day</div>
-            </td>
-            <td>
-            <div class="contenttext">ASAP</div>
-            </td>
-            <td>
-            <div class="contenttext">Private</div>
-            </td>
-            <td>
-            <div class="contenttext">No</div>
-            </td>
-          </tr>
-          <tr>
-            <td>
-            <div class="contenttext">No</div>
-            </td>
-            <td>
-            <div class="contenttext">Three Business Days</div>
-            </td>
-            <td>
-            <div class="contenttext">Sometime</div>
-            </td>
-            <td>
-            <div class="contenttext">Public</div>
-            </td>
-            <td>
-            <div class="contenttext">Yes</div>
-            </td>
-          </tr>
-          <tr>
-            <td>
-            <div class="contenttext">No</div>
-            </td>
-            <td>
-            <div class="contenttext">Three Business Days</div>
-            </td>
-            <td>
-            <div class="contenttext">Sometime</div>
-            </td>
-            <td>
-            <div class="contenttext">Private</div>
-            </td>
-            <td>
-            <div class="contenttext">No</div>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-      <p class="contenttext">Rates:</p>
-      <table cellpadding="2" cellspacing="0" border="1">
-        <tbody>
-          <tr>
-            <td>
-            <div class="contenttext"><b>Service Plan</b></div>
-            </td>
-            <td>
-            <div class="contenttext"><b>Cost/Term</b></div>
-            </td>
-            <td>
-            <div class="contenttext"><b>Priority Hours Incl.</b></div>
-            </td>
-            <td>
-            <div class="contenttext"><b>Additional Priority Hour</b></div>
-            </td>
-            <td>
-            <div class="contenttext"><b>Buy Now (PayPal)</b></div>
-            </td>
-          </tr>
-          <tr>
-            <td>
-            <div class="contenttext">Yearly Premium Support</div>
-            </td>
-            <td>
-            <div class="contenttext">$2000</div>
-            </td>
-            <td>
-            <div class="contenttext">12/year</div>
-            </td>
-            <td>
-            <div class="contenttext">$75</div>
-            </td>
-            <td>
-            <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
-            	<input type="hidden" name="cmd" value="_xclick">
-            	<input type="hidden" name="business" value="support@ofbiz.org">
-            	<input type="hidden" name="item_name" value="Yearly Premium Support">
-            	<input type="hidden" name="item_number" value="SUPYR">
-            	<input type="hidden" name="amount" value="2000.00">
-            	<input type="hidden" name="currency_code" value="USD">
-            	<input type="hidden" name="on0" value="Email Address">
-              <div class="contenttext">Email Address</div>
-              <input type="text" name="os0" maxlength="200"> 
-              <input type="image" src="https://www.paypal.com/images/x-click-but23.gif" border="0" name="submit" alt="Make payments with PayPal - it's fast, free and secure!"></form>
-              <div class="contenttext">(<a href="mailto:support@ofbiz.org">email us</a> to pay by check)</div>
-            </td>
-          </tr>
-          <tr>
-            <td>
-            <div class="contenttext">Yearly Additional Email</div>
-            </td>
-            <td>
-            <div class="contenttext">$500</div>
-            </td>
-            <td>
-            <div class="contenttext">N/A</div>
-            </td>
-            <td>
-            <div class="contenttext">N/A</div>
-            </td>
-            <td>
-            <form action="https://www.paypal.com/cgi-bin/webscr"
- method="post"> <input type="hidden" name="cmd" value="_xclick"> <input
- type="hidden" name="business" value="support@ofbiz.org"> <input
- type="hidden" name="item_name" value="Yearly Additional Email"> <input
- type="hidden" name="item_number" value="SUPYRAE"> <input type="hidden"
- name="amount" value="500.00"> <input type="hidden"
- name="currency_code" value="USD"> <input type="hidden" name="on0"
- value="Email Address">
-              <div class="contenttext">Email Address</div>
-              <input type="text" name="os0" maxlength="200"> <input
- type="hidden" name="on1" value="Primary Email Address">
-              <div class="contenttext">Primary Email Address</div>
-              <input type="text" name="os1" maxlength="200"> <input
- type="image" src="https://www.paypal.com/images/x-click-but23.gif"
- border="0" name="submit"
- alt="Make payments with PayPal - it's fast, free and secure!"> </form>
-              <div class="contenttext">(<a href="mailto:support@ofbiz.org">email us</a> to pay by check)</div>
-            </td>
-          </tr>
-          <tr>
-            <td>
-            <div class="contenttext">Monthly Premium Support</div>
-            </td>
-            <td>
-            <div class="contenttext">$200</div>
-            </td>
-            <td>
-            <div class="contenttext">1/month</div>
-            </td>
-            <td>
-            <div class="contenttext">$90</div>
-            </td>
-            <td>
-            <form action="https://www.paypal.com/cgi-bin/webscr"
- method="post"> <input type="hidden" name="cmd"
- value="_xclick-subscriptions"> <input type="hidden" name="business"
- value="support@ofbiz.org"> <input type="hidden" name="item_name"
- value="Monthly Premium Support Subscription"> <input type="hidden"
- name="item_number" value="SUPMON"> <input type="hidden"
- name="no_shipping" value="1"> <input type="hidden" name="no_note"
- value="1"> <input type="hidden" name="currency_code" value="USD"> <input
- type="hidden" name="on0" value="Email Address">
-              <div class="contenttext">Email Address</div>
-              <input type="text" name="os0" maxlength="200"> <input
- type="image" src="https://www.paypal.com/images/x-click-but24.gif"
- border="0" name="submit"
- alt="Make payments with PayPal - it's fast, free and secure!"> <input
- type="hidden" name="a3" value="200.00"> <input type="hidden" name="p3"
- value="1"> <input type="hidden" name="t3" value="M"> <input
- type="hidden" name="src" value="1"> <input type="hidden" name="sra"
- value="1"> </form>
-            </td>
-          </tr>
-          <tr>
-            <td>
-            <div class="contenttext">Monthly Additional Email</div>
-            </td>
-            <td>
-            <div class="contenttext">$50</div>
-            </td>
-            <td>
-            <div class="contenttext">N/A</div>
-            </td>
-            <td>
-            <div class="contenttext">N/A</div>
-            </td>
-            <td>
-            <form action="https://www.paypal.com/cgi-bin/webscr"
- method="post"> <input type="hidden" name="cmd"
- value="_xclick-subscriptions"> <input type="hidden" name="business"
- value="support@ofbiz.org"> <input type="hidden" name="item_name"
- value="Monthly Additional Email Subscription"> <input type="hidden"
- name="item_number" value="SUPMONAE"> <input type="hidden"
- name="no_shipping" value="1"> <input type="hidden" name="no_note"
- value="1"> <input type="hidden" name="currency_code" value="USD"> <input
- type="hidden" name="on0" value="Email Address">
-              <div class="contenttext">Email Address</div>
-              <input type="text" name="os0" maxlength="200"> <input
- type="hidden" name="on1" value="Primary Email Address">
-              <div class="contenttext">Primary Email Address</div>
-              <input type="text" name="os1" maxlength="200"> <input
- type="image" src="https://www.paypal.com/images/x-click-but24.gif"
- border="0" name="submit"
- alt="Make payments with PayPal - it's fast, free and secure!"> <input
- type="hidden" name="a3" value="50.00"> <input type="hidden" name="p3"
- value="1"> <input type="hidden" name="t3" value="M"> <input
- type="hidden" name="src" value="1"> <input type="hidden" name="sra"
- value="1"> </form>
-            </td>
-          </tr>
-          <tr>
-            <td>
-            <div class="contenttext">Cancel Subscription</div>
-            </td>
-            <td>
-            <div class="contenttext">N/A</div>
-            </td>
-            <td>
-            <div class="contenttext">N/A</div>
-            </td>
-            <td>
-            <div class="contenttext">N/A</div>
-            </td>
-            <td> <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_subscr-find&amp;alias=support%40pfbiz.org">
-            <img src="https://www.paypal.com/images/cancel_subscribe_gen.gif" border="0">
-            </a> </td>
-          </tr>
-        </tbody>
-      </table>
-      <p class="contenttext">Please note, this service does not include
-feature requests or enhancements in the base rate. Priority hours can
-be used for most new features and enhancements, or you can contact us
-directly for other arrangements.</p>
-      <hr class="sepbar">
       <p class="contenttext"><b><a name="ServiceProviders">Service Providers</a></b></p>
       <p class="contenttext">The OFB Group has been formed to handle
 the quality control and maintenance tasks
@@ -839,7 +484,7 @@ from their customers and clients is very important for maintaining a
 high quality list and
 for differentiating between the various organizations. Please send
 feedback and
-rating information to <a href="mailto:feedback@ofbgroup.com">feedback@ofbgroup.com</a>.</p>
+rating information to <a href="mailto:support@ofbiz.org">support@ofbiz.org</a>.</p>
 <!-- <p class='contenttext'>Click here for the website of <a href="http://www.ofbgroup.com/">The OFB
 Group</a>.</p> -->
 <!-- Descriptions of Types of Service Providers Goes Here -->
@@ -892,7 +537,8 @@ advanced hosting provider section</div>
 exposure &amp; helps search engine rankings</div>
       <div class="contenttext">+ receive priority referrals from
 OFBGroup</div>
-<!-- content ends --> </div>
+<!-- content ends --> 
+</div>
 </div>
 </div>
 <br/>
