A few cleanups and updates on Undersun services, especially support now that we have good details on our support offering
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4236 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/website/services.html
+++ b/website/services.html
@@ -273,6 +273,45 @@
               <tbody>
                 <tr>
                   <td valign="middle" align="left">
+                  <div class="boxhead">Premium&nbsp;Hosting&nbsp;Providers</div>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+            </td>
+          </tr>
+          <tr>
+            <td width="100%">
+            <table width="100%" border="0" cellspacing="0" cellpadding="0" class="boxbottom">
+              <tbody>
+                <tr>
+                  <td align="left">
+                  <div>&nbsp;-&nbsp;<a class="buttontext" href="http://www.contegix.com" target="_blank"><b>Contegix LLC</b></a></div>
+                  <div>&nbsp;&nbsp;&nbsp;<a class="buttontext" href="http://www.contegix.com" target="_blank"><b>www.contegix.com</b></a></div>
+                  <div>&nbsp;&nbsp;&nbsp;<a class="buttontext" href="mailto:sales@contegix.com"><b>sales@contegix.com</b></a></div>
+                  <div>&nbsp;-&nbsp;<a class="buttontext" href="http://www.nowpulse.com" target="_blank"><b>NowPulse</b></a></div>
+                  <div>&nbsp;&nbsp;&nbsp;<a class="buttontext" href="http://www.nowpulse.com" target="_blank"><b>www.nowpulse.com</b></a></div>
+                  <div>&nbsp;&nbsp;&nbsp;<a class="buttontext" href="mailto:info@nowpulse.com"><b>info@nowpulse.com</b></a></div>
+                  <div>&nbsp;-&nbsp;<a class="buttontext" href="http://www.serversusa.com" target="_blank"><b>ServersUSA</b></a></div>
+                  <div>&nbsp;&nbsp;&nbsp;<a class="buttontext" href="http://www.serversusa.com" target="_blank"><b>www.serversusa.com</b></a></div>
+                  <div>&nbsp;&nbsp;&nbsp;<a class="buttontext" href="mailto:sales@serversusa.com"><b>sales@serversusa.com</b></a></div>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <br/>
+      <table border="0" width="100%" cellspacing="0" cellpadding="0" class="boxoutside">
+        <tbody>
+          <tr>
+            <td width="100%">
+            <table width="100%" border="0" cellspacing="0" cellpadding="0" class="boxtop">
+              <tbody>
+                <tr>
+                  <td valign="middle" align="left">
                   <div class="boxhead">Advanced&nbsp;Solution&nbsp;Providers</div>
                   </td>
                 </tr>
@@ -339,45 +378,6 @@
               <tbody>
                 <tr>
                   <td valign="middle" align="left">
-                  <div class="boxhead">Premium&nbsp;Hosting&nbsp;Providers</div>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-            </td>
-          </tr>
-          <tr>
-            <td width="100%">
-            <table width="100%" border="0" cellspacing="0" cellpadding="0" class="boxbottom">
-              <tbody>
-                <tr>
-                  <td align="left">
-                  <div>&nbsp;-&nbsp;<a class="buttontext" href="http://www.contegix.com" target="_blank"><b>Contegix LLC</b></a></div>
-                  <div>&nbsp;&nbsp;&nbsp;<a class="buttontext" href="http://www.contegix.com" target="_blank"><b>www.contegix.com</b></a></div>
-                  <div>&nbsp;&nbsp;&nbsp;<a class="buttontext" href="mailto:sales@contegix.com"><b>sales@contegix.com</b></a></div>
-                  <div>&nbsp;-&nbsp;<a class="buttontext" href="http://www.nowpulse.com" target="_blank"><b>NowPulse</b></a></div>
-                  <div>&nbsp;&nbsp;&nbsp;<a class="buttontext" href="http://www.nowpulse.com" target="_blank"><b>www.nowpulse.com</b></a></div>
-                  <div>&nbsp;&nbsp;&nbsp;<a class="buttontext" href="mailto:info@nowpulse.com"><b>info@nowpulse.com</b></a></div>
-                  <div>&nbsp;-&nbsp;<a class="buttontext" href="http://www.serversusa.com" target="_blank"><b>ServersUSA</b></a></div>
-                  <div>&nbsp;&nbsp;&nbsp;<a class="buttontext" href="http://www.serversusa.com" target="_blank"><b>www.serversusa.com</b></a></div>
-                  <div>&nbsp;&nbsp;&nbsp;<a class="buttontext" href="mailto:sales@serversusa.com"><b>sales@serversusa.com</b></a></div>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-      <br/>
-      <table border="0" width="100%" cellspacing="0" cellpadding="0" class="boxoutside">
-        <tbody>
-          <tr>
-            <td width="100%">
-            <table width="100%" border="0" cellspacing="0" cellpadding="0" class="boxtop">
-              <tbody>
-                <tr>
-                  <td valign="middle" align="left">
                   <div class="boxhead">Hosting&nbsp;Providers</div>
                   </td>
                 </tr>
@@ -411,16 +411,18 @@ related services.</p>
       <!-- <div><a class="buttontext" href="#Voting"><b>OFBiz Feature Voting Site</b></a></div> -->
       <div><a class="buttontext" href="#Training"><b>Seminars and Training</b></a></div>
       <div><a class="buttontext" href="#Mentoring"><b>On-Site Mentoring</b></a></div>
-      <div><a class="buttontext" href="#EmailSupport"><b>Premium Email Support</b></a></div>
+      <div><a class="buttontext" href="#Support"><b>Comprehensive Support</b></a></div>
       <div><a class="buttontext" href="#ServiceProviders"><b>Service Providers</b></a></div>
+      
+      <div style="clear: left;"/>
 
+      <br/>
       <hr class="sepbar">
 
       <div>
       <p class="contenttext"><b><a name="Undersun">OFBiz Products From</a> <a href="http://www.undersunconsulting.com/control/home.html?atc=OFB">Undersun Consulting</a></b></p>
 
-      <p class="contenttext">At the <a href="http://www.undersunconsulting.com/ecommerce/control/main?atc=OFB">Undersun Consulting Store</a> you'll find:</p>
-
+      <div class="contenttext">At the <a class="buttontext" href="http://www.undersunconsulting.com/ecommerce/control/main?atc=OFB">Undersun Consulting Store</a> you'll find:</div>
       <ul>
         <li class="contenttext">OFBiz Reference Books</li>
         <li class="contenttext">OFBiz Training Videos</li>
@@ -428,6 +430,14 @@ related services.</p>
       </ul>
       </div>
 
+      <hr class="sepbar">
+      <p class="contenttext"><b><a name="Support">Comprehensive Support</a></b></p>
+      <p class="contenttext">Comprehensive Support is being offered by Andy
+Zeneski and David E. Jones (through their consulting firm <a class="buttontext" href="http://www.undersunconsulting.com/control/home.html?atc=OFB" target="_blank">Undersun
+Consulting LLC</a>) to help you use OFBiz in the real world with confidence. 
+For complete details see the <a class="buttontext" href="http://www.undersunconsulting.com/control/support.html?atc=OFB" target="_blank">Support</a> page on the Undersun Consulting web site.
+For information on other Undersun services and solutions, see the <a class="buttontext" href="http://www.undersunconsulting.com/control/solutions.html?atc=OFB" target="_blank">Solutions</a> page on that site.</p>
+          
       <hr class="sepbar">
       <p class="contenttext"><b><a name="Training">Seminars and Training</a></b></p>
       <p class="contenttext">Seminars and Training Courses are being
@@ -478,7 +488,7 @@ control over the
 Open For Business Project. Its only purpose is to certify affiliated
 services
 organizations. To be listed here please send an email request to <a
- href="mailto:providers@ofbgroup.com">providers@ofbgroup.com</a>.</p>
+ href="mailto:support@ofbiz.org">support@ofbiz.org</a>.</p>
       <p class="contenttext">Feedback about these service providers
 from their customers and clients is very important for maintaining a
 high quality list and
