Added link to Gracious Style for marketing list
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4310 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/website/marketing.html
+++ b/website/marketing.html
@@ -275,6 +275,7 @@
               <div>&nbsp;-&nbsp;<a class="buttontext" href="http://www.metrobelle.com/control/main" target="_blank"><b>Metrobelle</b></a></div>
               <div>&nbsp;-&nbsp;<a class="buttontext" href="http://www.ulta.com/control/main" target="_blank"><b>Ulta</b></a></div>
               <div>&nbsp;-&nbsp;<a class="buttontext" href="http://www.esalton.com/control/main" target="_blank"><b>Salton</b></a></div>
+              <div>&nbsp;-&nbsp;<a class="buttontext" href="http://www.graciousstyle.com/" target="_blank"><b>Gracious Style</b></a></div>
               
               <div>&nbsp;-&nbsp;<a class="buttontext" href="http://www.totes-isotoner-sales.com/ecommerce/control/main" target="_blank"><b>totes >> ISOTONER</b></a></div>
               <div>&nbsp;-&nbsp;<a class="buttontext" href="http://hello2.cellularone.com/" target="_blank"><b>CellularOne (flash front-end)</b></a></div>
