Added open travel system demo links from Hans Bakker
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4369 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/website/index.html
+++ b/website/index.html
@@ -177,9 +177,14 @@
         <table width="100%" border="0" cellspacing="0" cellpadding="0" class="boxbottom">
           <tr>
             <td align="left">
+              <div class="tabletext">*Stock Demo <a class="buttontext" href="http://www.undersunconsulting.com/control/home.html?atc=OFB" target="_blank">by Undersun Consulting</a></div>
               <div>&nbsp;-&nbsp;<a class="buttontext" href="http://demo.dejc.com:8080/ecommerce/control/main" target="_blank">eCommerce Demo</a></div>
-              <div>&nbsp;-&nbsp;<a class="buttontext" href="https://demo.dejc.com:8443/catalog/control/login/main?USERNAME=demoadmin&PASSWORD=ofbiz" target="_blank">Management Console Demo</a></div>
-              <div class="tabletext">(Demo Provided By <a class="buttontext" href="http://www.undersunconsulting.com/control/home.html?atc=OFB" target="_blank">Undersun Consulting</a>)</div>
+              <div>&nbsp;-&nbsp;<a class="buttontext" href="https://demo.dejc.com:8443/catalog/control/login/main?USERNAME=demoadmin&PASSWORD=ofbiz" target="_blank">Management Console</a></div>
+              <div class="tabletext">*Extended Demo <a class="buttontext" href="http://www.opentravelsystem.org" target="_blank">by Open Travel System</a></div>
+              <div>&nbsp;-&nbsp;<a class="buttontext" href="http://orion2.a-net.nl:8180/ecommerce/control/main" target="_blank">eCommerce Demo</a></div>
+              <div>&nbsp;-&nbsp;<a class="buttontext" href="https://orion2.a-net.nl:8443/catalog/control/login/main?USERNAME=demoadmin&PASSWORD=ofbiz" target="_blank">Management Console</a></div>
+              <div>&nbsp;-&nbsp;<a class="buttontext" href="http://orion2.a-net.nl:8180/hotelfrontend/control/main" target="_blank">Hotel Frontend</a></div>
+              <div>&nbsp;-&nbsp;<a class="buttontext" href="https://orion2.a-net.nl:8443/hotelbackend/control/login/main?USERNAME=demoadmin&PASSWORD=ofbiz" target="_blank">Hotel Backend</a></div>
             </td>
           </tr>
         </table>
