--- a/website/index.html
+++ b/website/index.html
@@ -65,7 +65,7 @@
             <table width="100%" border="0" cellspacing="0" cellpadding="0">
               <tr>
                 <td class="tabdownleft"><a href="documents.html" title="Documents" class="tablink"><img src="images/spacer.gif" alt="" width="10" height="15" border="0"></a></td>
-                <td nowrap="nowrap" class="tabdowncenter"><a href="documents.html" title="Documents" class="tablink">Docs & Books</a></td>
+                <td nowrap="nowrap" class="tabdowncenter"><a href="documents.html" title="Documents" class="tablink">Docs &amp; Books</a></td>
                 <td class="tabdownright"><a href="documents.html" title="Documents" class="tablink"><img src="images/spacer.gif" alt="" width="10" height="15" border="0"></a></td>
               </tr>
               <tr><td colspan="3" class="blackarea"><img src="images/spacer.gif" alt="" height="1"></td></tr>
@@ -83,17 +83,6 @@
               <tr><td colspan="3" class="whitearea"><img src="images/spacer.gif" alt="" height="1"></td></tr>               
             </table>
           </td>                       
-          <td height="15" class="tabdownblock">
-            <table width="100%" border="0" cellspacing="0" cellpadding="0">                
-              <tr>
-                <td class="tabdownleft"><a href="presentation/index.html" title="Presentation" class="tablink"><img src="images/spacer.gif" alt="" width="10" height="15" border="0"></a></td>
-                <td nowrap="nowrap" class="tabdowncenter"><a href="presentation/index.html" title="Presentation" class="tablink">Presentation</a></td>
-                <td class="tabdownright"><a href="presentation/index.html" title="Presentation" class="tablink"><img src="images/spacer.gif" alt="" width="10" height="15" border="0"></a></td>
-              </tr>
-              <tr><td colspan="3" class="blackarea"><img src="images/spacer.gif" alt="" height="1"></td></tr>
-              <tr><td colspan="3" class="whitearea"><img src="images/spacer.gif" alt="" height="1"></td></tr>               
-            </table>
-          </td>         
           <td height="15" class="tabdownblock">
             <table width="100%" border="0" cellspacing="0" cellpadding="0">                
               <tr>
