--- a/website/marketing.html
+++ b/website/marketing.html
@@ -67,7 +67,7 @@
             <table width="100%" border="0" cellspacing="0" cellpadding="0">
               <tr>
                 <td class="tabdownleft"><a href="documents.html" title="Documents" class="tablink"><img src="images/spacer.gif" alt="" width="10" height="15" border="0"></a></td>
-                <td nowrap="nowrap" class="tabdowncenter"><a href="documents.html" title="Documents" class="tablink">Docs & Books</a></td>
+                <td nowrap="nowrap" class="tabdowncenter"><a href="documents.html" title="Documents" class="tablink">Docs &amp; Books</a></td>
                 <td class="tabdownright"><a href="documents.html" title="Documents" class="tablink"><img src="images/spacer.gif" alt="" width="10" height="15" border="0"></a></td>
               </tr>
               <tr><td colspan="3" class="blackarea"><img src="images/spacer.gif" alt="" height="1"></td></tr>
@@ -81,17 +81,6 @@
                 <td nowrap="nowrap" class="tabupcenter"><a href="marketing.html" title="Marketing" class="tablinkselected">Marketing</a></td>
                 <td class="tabupright"><a href="marketing.html" title="Marketing" class="tablinkselected"><img src="images/spacer.gif" alt="" width="10" height="15" border="0"></a></td>
               </tr>
-            </table>
-          </td>
-          <td height="15" class="tabdownblock">
-            <table width="100%" border="0" cellspacing="0" cellpadding="0">
-              <tr>
-                <td class="tabdownleft"><a href="presentation/index.html" title="Presentation" class="tablink"><img src="images/spacer.gif" alt="" width="10" height="15" border="0"></a></td>
-                <td nowrap="nowrap" class="tabdowncenter"><a href="presentation/index.html" title="Presentation" class="tablink">Presentation</a></td>
-                <td class="tabdownright"><a href="presentation/index.html" title="Presentation" class="tablink"><img src="images/spacer.gif" alt="" width="10" height="15" border="0"></a></td>
-              </tr>
-              <tr><td colspan="3" class="blackarea"><img src="images/spacer.gif" alt="" height="1"></td></tr>
-              <tr><td colspan="3" class="whitearea"><img src="images/spacer.gif" alt="" height="1"></td></tr>
             </table>
           </td>
           <td height="15" class="tabdownblock">
@@ -132,7 +121,7 @@
       <TD width="100%">
         <table width="100%" border="0" cellspacing="0" cellpadding="0" class="boxtop">
           <tr>
-            <td valign=middle align=left>
+            <td valign="middle" align="left">
               <div class="boxhead">What is OFBiz?</div>
             </td>
           </tr>
@@ -143,7 +132,7 @@
       <TD width="100%">
         <table width="100%" border="0" cellspacing="0" cellpadding="0" class="boxbottom">
           <tr>
-            <td align=left>
+            <td align="left">
               <div>&nbsp;-&nbsp;<a class='buttontext' href="general-overview.html"><b>General Overview</b></a></div>
               <div>&nbsp;-&nbsp;<a class='buttontext' href="ofbiz-for-me.html"><b>Is OFBiz for Me?</b></a></div>
               <div>&nbsp;-&nbsp;<a class='buttontext' href="feature-list.html"><b>Feature List</b></a></div>
