--- a/website/news.html
+++ b/website/news.html
@@ -22,10 +22,10 @@
             <table cellpadding="0" cellspacing="0" width="1%">
               <tr>
               	<td valign="middle" align="right"><a href="http://www.java.net"><img src="http://today.java.net/images/javanet_button_90.gif" width="90" height="25" border="0" alt="java.net Member Button"></a></td>
-                <td valign=middle>&nbsp;&nbsp;</td>
+                <td valign="middle">&nbsp;&nbsp;</td>
                 <td valign="middle" align="right"><A href="http://sf.net/projects/ofbiz"><IMG src="http://sourceforge.net/sflogo.php?group_id=27173" width="88" height="31" border="0" alt="SourceForge Logo"></A></td>
-                <td valign=middle>&nbsp;&nbsp;</td>
-                <td valign=middle><A href="http://www.ofbiz.org"><img src="images/ofbiz_powered.gif" width="88" border="0"></a></td>
+                <td valign="middle">&nbsp;&nbsp;</td>
+                <td valign="middle"><A href="http://www.ofbiz.org"><img src="images/ofbiz_powered.gif" width="88" border="0"></a></td>
               </tr>
             </table>
           </td>
@@ -129,8 +129,7 @@
 
           </td>
           <td width="1%">&nbsp;&nbsp;&nbsp;</td>
-          <td width="37%" valign=top>
-
+          <td width="37%" valign="top">
             <h2>OFBiz News / Announcements</h2>
             <script language="javascript" type="text/javascript" src="http://www.feedroll.com/rssviewer/view_rss.php?type=js&source_id=22205&feed_css=1&feed_maxitems=10&feed_desclimit=300&feed_compact=0&feed_xmlbutton=1&link_openblank=1"></script>
             <br>
