--- a/website/philosophy.html
+++ b/website/philosophy.html
@@ -16,15 +16,15 @@
     <td width='100%'>
       <table width='100%' border='0' cellspacing='0' cellpadding='0' class='headerboxtop'>
         <tr>          
-          <td align=left width='1%'><a href="http://www.ofbiz.org"><img src="images/ofbiz_logo.jpg"  border="0" alt='The Open For Business Project'></a></td>
-          <td align=right>
+          <td align="left" width="1%"><a href="http://www.ofbiz.org"><img src="images/ofbiz_logo.jpg"  border="0" alt='The Open For Business Project'></a></td>
+          <td align="right">
             <table cellpadding='0' cellspacing='0' width='1%'>
               <tr>
               	<td valign="middle" align="right"><a href="http://www.java.net"><img src="http://today.java.net/images/javanet_button_90.gif" width="90" height="25" border="0" alt="java.net Member Button"></a></td>
-                <td valign=middle>&nbsp;&nbsp;</td>
-                <td valign='middle' align='right'><A href="http://sf.net/projects/ofbiz"><IMG src="http://sourceforge.net/sflogo.php?group_id=27173" width="88" height="31" border="0" alt="SourceForge Logo"></A></td>
-                <td valign=middle>&nbsp;&nbsp;</td>
-                <td valign=middle><A href="http://www.ofbiz.org"><img src="images/ofbiz_powered.gif" width="88" border="0"></a></td>               
+                <td valign="middle">&nbsp;&nbsp;</td>
+                <td valign="middle" align="right"><A href="http://sf.net/projects/ofbiz"><IMG src="http://sourceforge.net/sflogo.php?group_id=27173" width="88" height="31" border="0" alt="SourceForge Logo"></A></td>
+                <td valign="middle">&nbsp;&nbsp;</td>
+                <td valign="middle"><A href="http://www.ofbiz.org"><img src="images/ofbiz_powered.gif" width="88" border="0"></a></td>               
               </tr>
             </table>
           </td>
@@ -65,7 +65,7 @@
             <table width="100%" border="0" cellspacing="0" cellpadding="0">                
               <tr>
                 <td class="tabdownleft"><a href="documents.html" title="Documents" class="tablink"><img src="images/spacer.gif" alt="" width="10" height="15" border="0"></a></td>
-                <td nowrap="nowrap" class="tabdowncenter"><a href="documents.html" title="Documents" class="tablink">Docs & Books</a></td>
+                <td nowrap="nowrap" class="tabdowncenter"><a href="documents.html" title="Documents" class="tablink">Docs &amp; Books</a></td>
                 <td class="tabdownright"><a href="documents.html" title="Documents" class="tablink"><img src="images/spacer.gif" alt="" width="10" height="15" border="0"></a></td>
               </tr>
               <tr><td colspan="3" class="blackarea"><img src="images/spacer.gif" alt="" height="1"></td></tr>
@@ -83,17 +83,6 @@
               <tr><td colspan="3" class="whitearea"><img src="images/spacer.gif" alt="" height="1"></td></tr>               
             </table>
           </td>                       
-          <td height="15" class="tabdownblock">
-            <table width="100%" border="0" cellspacing="0" cellpadding="0">                
-              <tr>
-                <td class="tabdownleft"><a href="presentation/index.html" title="Presentation" class="tablink"><img src="images/spacer.gif" alt="" width="10" height="15" border="0"></a></td>
-                <td nowrap="nowrap" class="tabdowncenter"><a href="presentation/index.html" title="Presentation" class="tablink">Presentation</a></td>
-                <td class="tabdownright"><a href="presentation/index.html" title="Presentation" class="tablink"><img src="images/spacer.gif" alt="" width="10" height="15" border="0"></a></td>
-              </tr>
-              <tr><td colspan="3" class="blackarea"><img src="images/spacer.gif" alt="" height="1"></td></tr>
-              <tr><td colspan="3" class="whitearea"><img src="images/spacer.gif" alt="" height="1"></td></tr>               
-            </table>
-          </td>         
           <td height="15" class="tabdownblock">
             <table width="100%" border="0" cellspacing="0" cellpadding="0">                
               <tr>
