Moved and updated some libraries; adding jakarta regexp 1.3, httpunit 1.6 to base and removing from old locations
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4385 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/website/comingsoon.html
+++ b/website/comingsoon.html
@@ -32,7 +32,7 @@
   <li class="contenttext"><a href="#Accounting">Accounting</a>
   <li class="contenttext"><a href="#Content">Content Management</a>
   <li class="contenttext"><a href="#CRM">Customer Relationship Management (CRM)</a>
-  <li class="contenttext"><a href="#WorkEffort">Work Effort & Request, etc Management</a>
+  <li class="contenttext"><a href="#WorkEffort">Work Effort &amp; Request, etc Management</a>
   <li class="contenttext"><a href="#Manufacturing">Manufacturing Management</a>
 </ul>
 <br>
@@ -150,8 +150,8 @@ nailed down.</p>
 
 
 <ul>
-  <li class="contenttext">Role & Task oriented special UIs for simpler management
-  <li class="contenttext">Add transform to create links & other tools to handle site 
+  <li class="contenttext">Role &amp; Task oriented special UIs for simpler management
+  <li class="contenttext">Add transform to create links &amp; other tools to handle site 
     structure for managed content, including expanding tree widget kind of like the 
     ProductCategory browser; would use hierarchical ContentAssocs for the data structure
   <li class="contenttext">Wiki style permissions for community content site (like blogs, forums, etc; just different permissions)
@@ -180,7 +180,7 @@ nailed down.</p>
   definitions like DTDs or XML Schemas. The document definition will be a piece of content and
   may have a workflow associated with it that is automatically started when content based on that
   doc type is created/updated/etc.
-  <li class="contenttext">Web accessible mailing lists; basically a forum with email distribution & posting of messages/replies through email
+  <li class="contenttext">Web accessible mailing lists; basically a forum with email distribution &amp; posting of messages/replies through email
 </ul>
 
 <hr class="sepbar">
@@ -190,9 +190,9 @@ nailed down.</p>
 <p class="contenttext"></p>
 
 <ul>
-  <li class="contenttext">Call Center (Customer Service & Sales)
+  <li class="contenttext">Call Center (Customer Service &amp; Sales)
   <ul>
-    <li class="contenttext">In & Out Call Screen, ie from one spot handle calls that come up, either incoming or outgoing
+    <li class="contenttext">In &amp; Out Call Screen, ie from one spot handle calls that come up, either incoming or outgoing
     <li class="contenttext">Sales Oriented and Other Surveys, implementation of call scripts
     <li class="contenttext">Communication Event Build Out - track info about calls, emails, other events
   </ul>
@@ -203,13 +203,13 @@ nailed down.</p>
   </ul>
   <li class="contenttext">Sales Management
   <ul>
-    <li class="contenttext">Contact Management - Private & Group Contacts
+    <li class="contenttext">Contact Management - Private &amp; Group Contacts
     <li class="contenttext">Sales Pipeline/Workflow/Status Tracking
   </ul>
 </ul>
 
 <hr class="sepbar">
-<h3><a name="WorkEffort">Work Effort & Request, etc Management - Notes updated April 2004</a></h3>
+<h3><a name="WorkEffort">Work Effort &amp; Request, etc Management - Notes updated April 2004</a></h3>
 <hr class="sepbar">
 
 <p class="contenttext"></p>
@@ -219,7 +219,7 @@ nailed down.</p>
   <li class="contenttext">Availability Scheduling
   <ul>
     <li class="contenttext">Use WorkEffort to schedule availability just like events, which denote specific reservations or "busy-ness"
-    <li class="contenttext">Services to check availability & list availability according to constraints
+    <li class="contenttext">Services to check availability &amp; list availability according to constraints
     <li class="contenttext">In calendar view show availability in light blue, not available in light grey, scheduled/event time in dark blue
   </ul>
   <li class="contenttext">Add FixedAsset scheduling (Facility scheduling mostly there already, but may need some extension)
@@ -231,7 +231,7 @@ nailed down.</p>
   <li class="contenttext">Public &amp; Private WorkEfforts and Requests; on public calendars show the time as busy, but no details about the event
   <li class="contenttext">Other Project Management Stuff Needed for OFBiz Use
   <ul>
-    <li class="contenttext">Create "Projects" (maybe different than work efforts) with a home page, etc; public & private projects
+    <li class="contenttext">Create "Projects" (maybe different than work efforts) with a home page, etc; public &amp; private projects
     <li class="contenttext">Request (Issue) Assignment to parties associated with the project
     <li class="contenttext">My Issues/Tasks etc page
     <li class="contenttext">Allow per user customization of the issue/task/etc pages, save user settings in a database
