A bunch of missed references to the components directory
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4544 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/website/training/AdvancedFramework.html
+++ b/website/training/AdvancedFramework.html
@@ -39,7 +39,7 @@ Topics Covered<br>
   <ol>
     <li> Control Servlet</li>
     <ol>
-      <li> ofbiz/components/control/dtd/site-conf.dtd </li>
+      <li> ofbiz/framework/webapp/dtd/site-conf.dtd </li>
       <li> &lt;webapp&gt;/WEB-INF/controller.xml </li>
       <li> Requests </li>
       <li> Events</li>
@@ -218,7 +218,7 @@ GenericValue) </li>
       <li> Finding</li>
       <ol>
         <li> By Primary Key </li>
-        <li> By “And” </li>
+        <li> By ï¿½Andï¿½ </li>
         <li> EntityConditions
           <ol>
             <li> EntityFieldMap </li>
@@ -260,7 +260,7 @@ GenericValue) </li>
       </ol>
       <li> Synchronicity Support </li>
       <li> Parameter Validation </li>
-      <li> Service “Engines”</li>
+      <li> Service ï¿½Enginesï¿½</li>
       <ol>
         <li> The GenericEngine Interface </li>
         <li> Overview of Existing Engines </li>
