--- a/website/training/BasicFrameworkToolsOverview.html
+++ b/website/training/BasicFrameworkToolsOverview.html
@@ -85,26 +85,28 @@ or through a service) </li>
       </li>
     </ol>
   </li>
-  <li> Configuration &amp; Deployment Overview
+  <li>Configuration &amp; Deployment Overview
     <ol>
-      <li> Choosing and Setting Up a Database </li>
-      <li> Choosing and Setting Up an Application Server </li>
-      <li> OFBiz Configuration
+      <li>Choosing and Setting Up a Database </li>
+      <li>Choosing and Setting Up an Application Server </li>
+      <li>OFBiz Configuration
         <ol>
-          <li> ofbiz/base/config/debug.properties </li>
-          <li> ofbiz/base/config/component-load.xml </li>
-          <li> ofbiz/components/*/ofbiz-component.xml </li>
-          <li> ofbiz/components/entity/config/entityengine.xml
+          <li>ofbiz/base/config/debug.properties </li>
+          <li>ofbiz/base/config/component-load.xml </li>
+          <li>ofbiz/framework/*/ofbiz-component.xml </li>
+          <li>ofbiz/applications/*/ofbiz-component.xml </li>
+          <li>ofbiz/framework/entity/config/entityengine.xml
             <ol>
-              <li> Transaction Manager Setup </li>
-              <li> Database Setup </li>
+              <li>Transaction Manager Setup </li>
+              <li>Database Setup </li>
             </ol>
           </li>
-          <li> ofbiz/components/service/config/serviceengine.xml </li>
+          <li>ofbiz/framework/service/config/serviceengine.xml </li>
           <li> Other Configuration Files
             <ol>
-              <li> ofbiz/base/config/* </li>
-              <li> ofbiz/components/*/config/* </li>
+              <li>ofbiz/base/config/* </li>
+              <li>ofbiz/framework/*/config/* </li>
+              <li>ofbiz/applications/*/config/* </li>
             </ol>
           </li>
         </ol>
