--- a/website/index.html
+++ b/website/index.html
@@ -329,7 +329,12 @@ Open Source CMMS/EAM, and so on.</p>
 
 <div class="contenttext"><b><u>Announcements</u></b></div>
 
-<p class="contenttext"><b><span style="color: red;">OFBiz Online Documentation Site Now Available!</span></b> For more information and to order/subscribe see the <a class="buttontext" href="http://www.undersunconsulting.com/control/home.html?atc=OFB" target="_blank">Undersun Consulting LLC</a> web site, or go directly to the <a class="buttontext" href="http://www.undersunconsulting.com/ecommerce/control/main?atc=OFB" target="_blank">Undersun Store</a> (which is of course running OFBiz!).</p>
+<p class="contenttext"><b><span style="color: red;">OFBiz Basic Production Setup document Now Available!</span></b> <a href="http://www.undersunconsulting.com/static/OFBizProductionSetup.pdf">OFBiz Production Setup Guide</a>
+This is a free download meant to help you get going with OFBiz. It is sponsored by 
+<a href="http://www.undersunconsulting.com/control/home.html" target="_blank">Undersun Consulting</a> and 
+<a href="http://www.go-integral.com" target="_blank">Integral Business Solutions</a>.</p>
+
+<p class="contenttext"><b>OFBiz Online Documentation Site Now Available!</b> For more information and to order/subscribe see the <a class="buttontext" href="http://www.undersunconsulting.com/control/home.html?atc=OFB" target="_blank">Undersun Consulting LLC</a> web site, or go directly to the <a class="buttontext" href="http://www.undersunconsulting.com/ecommerce/control/main?atc=OFB" target="_blank">Undersun Store</a> (which is of course running OFBiz!).</p>
 
 <p class="contenttext"><b>OFBiz Framework Reference Book Now Available!</b> For more information and to order see the <a class="buttontext" href="http://www.undersunconsulting.com/control/home.html?atc=OFB" target="_blank">Undersun Consulting LLC</a> web site.</p>
 
