Decided going to the undersun site would be better
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4547 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/website/documents.html
+++ b/website/documents.html
@@ -147,7 +147,7 @@ training.
   <li class='contenttext'><a href="docs/coreconfig.html">OFBiz Framework Configuration Guide</a></li>
   <li class='contenttext'><a href="docs/entityconfig.html">Entity Engine (database) Configuration Guide</a></li>
   <li class='contenttext'><a href="docs/serviceconfig.html">Service Engine Configuration Guide</a></li>
-  <li class='contenttext'><a href="http://www.undersunconsulting.com/static/OFBizProductionSetup.pdf">OFBiz Production Setup Guide</a>
+  <li class='contenttext'><a href="http://www.undersunconsulting.com/control/onlineinfo.html?atc=OFB">OFBiz Production Setup Guide</a>
     NOTE: This is a free download meant to help you get going with OFBiz. It is sponsored by 
     <a href="http://www.undersunconsulting.com/control/home.html" target="_blank">Undersun Consulting</a> and 
     <a href="http://www.go-integral.com" target="_blank">Integral Business Solutions</a>.</li>
