--- a/website/index.html
+++ b/website/index.html
@@ -329,7 +329,7 @@ Open Source CMMS/EAM, and so on.</p>
 
 <div class="contenttext"><b><u>Announcements</u></b></div>
 
-<p class="contenttext"><b><span style="color: red;">OFBiz Basic Production Setup document Now Available!</span></b> <a href="http://www.undersunconsulting.com/static/OFBizProductionSetup.pdf">OFBiz Production Setup Guide</a>
+<p class="contenttext"><b><span style="color: red;">OFBiz Basic Production Setup document Now Available!</span></b> <a href="http://www.undersunconsulting.com/control/onlineinfo.html?atc=OFB">OFBiz Production Setup Guide</a>
 This is a free download meant to help you get going with OFBiz. It is sponsored by 
 <a href="http://www.undersunconsulting.com/control/home.html" target="_blank">Undersun Consulting</a> and 
 <a href="http://www.go-integral.com" target="_blank">Integral Business Solutions</a>.</p>
